# syncthing-merge

./: README.md  pyproject.toml
src/syncthing_merge/: __init__.py
